...

        // My request button - FIRST
        ActionItem(
            icon = Icons.AutoMirrored.Filled.FormatListBulleted,
            title = TITLE_MY_REQUESTS,
            subtitle = SEE_AND_EDIT,
            tag = ProfileTestTags.PROFILE_ACTION_MY_REQUEST,
            onClick = onMyRequestClick)

        // Accepted requests button - SECOND
        ActionItem(
            icon = Icons.AutoMirrored.Filled.PlaylistAddCheck,
            title = "Accepted Requests",
...
